name:                LETRECLanguage
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/groscoe/friedman-wand-letrec-language#the-letrec-language
license:             BSD3
license-file:        LICENSE
author:              Gustavo Roscoe
maintainer:          gustavo@gustavoroscoe.com
copyright:           2018 Gustavo Roscoe
category:            ProgrammingLanguages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Repl
                     , Expr
                     , Parser
                     , Eval
  build-depends:       base >= 4.7 && < 5
                       , parsec
                       , mtl
                       , containers
  default-language:    Haskell2010

executable LETRECLanguage
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LETRECLanguage
  default-language:    Haskell2010

test-suite LETRECLanguage-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LETRECLanguage
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/groscoe/friedman-wand-letrec-language
